@@ -23,3 +23,4 @@ A0.1   2020-01-21: dwd12admin: concept
 A0.2   2020-02-21: dwd12admin: -d to set destination (global, local or user)
 A0.3   2020-02-22: dwd12admin: -n to set destination name
 A0.4   2020-02-22: dwd12admin: -c to copy a set to another name/local
+A0.5   2020-02-22: dwd12admin: -x to copy a common volume to be a secret volume
